--- a/host/FR.KS.JAVA.SPRINGBOOT.P.L001/src/main/resources/application.properties
+++ b/host/FR.KS.JAVA.SPRINGBOOT.P.L001/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=fr_ks_java_springboot_p_l001
 # DATASOURCE (POSTGRESQL)
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:quiz_db}
 spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:secret}
+spring.datasource.password=${DB_PASSWORD:tuanhm43}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / HIBERNATE
@@ -18,5 +18,6 @@ spring.jpa.open-in-view=false
 logging.level.fpt.tuanhm43.fr_ks_java_springboot_p_l001=DEBUG
 
 # SECURITY & JWT CONFIGURATION
-security.jwt.secret-key=${JWT_SECRET:very_secret_key_must_be_long_enough_for_security_purposes}
-security.jwt.expiration=${JWT_EXPIRATION:86400000}
+security.jwt.secret-key=${JWT_SECRET}
+security.jwt.expiration=${JWT_EXPIRATION}
+
