--- a/host/FR.KS.JAVA.SPRINGBOOT.P.L001/src/main/resources/application.properties
+++ b/host/FR.KS.JAVA.SPRINGBOOT.P.L001/src/main/resources/application.properties
@@ -21,3 +21,7 @@ logging.level.fpt.tuanhm43.fr_ks_java_springboot_p_l001=DEBUG
 security.jwt.secret-key=${JWT_SECRET}
 security.jwt.expiration=${JWT_EXPIRATION}
 
+# Admin User Default
+app.admin.default-password=${ADMIN_DEFAULT_PASSWORD}
+app.user.default-password=${USER_DEFAULT_PASSWORD}
+
